# Eightfold-AI

./: .env.example  .gitignore  PIPELINE_ROUTE.md  PROJECT_CONTEXT.md  README.md  pyproject.toml  render.yaml  requirements.txt
config/: custom.json
config/examples/: 01_assignment_spec.json  02_custom_preset.json  03_minimal_rename.json  04_omit_missing.json  05_error_if_no_phone.json  06_no_confidence.json  07_recruiter_full.json  08_strict_contact.json
data/samples/: alice_johnson.docx  bob_williams.txt  generate_samples.py  jane_doe.docx  john_smith.docx  recruiter.csv
pipeline/: __init__.py  __main__.py  cli.py  export.py  logging_config.py  pipeline.py  reasoning.py
pipeline/confidence/: scoring.py
pipeline/extract/: resume_extractor.py
pipeline/merge/: entity_resolution.py  merger.py  source_annotation.py
pipeline/models/: __init__.py  canonical.py  raw.py  schema.py
pipeline/normalize/: __init__.py  countries.py  csv_fields.py  dates.py  phones.py  skills.py
pipeline/project/: default_config.json  projector.py
pipeline/sources/: __init__.py  csv_reader.py  github.py  resume_reader.py  text_quality.py
test_data/: README.md  config_minimal.json  config_strict.json  recruiter.csv
test_data/resumes/: aditi_verma.txt  aman_gupta.txt  arjun_das.txt  divya_krishnan.txt  fatima_sheikh.txt  harish_babu.txt  ishita_bose.txt  karan_singh.txt  kavya_menon.txt  manish_tiwari.txt  meera_joshi.txt  (+10 more)
test_data_v2/: README.md  config_lenient_v2.json  config_strict_v2.json  recruiter.csv
tests/: test_pipeline.py  test_test_data_v2.py
webapp/: server.py
(+16 files in other folders)
